fixed flex column layout cross axis to stretch, add padding right for xs, card use word-break: break-word;

--- a/src/app/company-card/company-card.component.scss
+++ b/src/app/company-card/company-card.component.scss
@@ -8,6 +8,6 @@
     height: 50px;
   }
   .description {
-    word-wrap: break-word
+    word-break: break-word;
   }
 }
